Minor fix - alignment of timer and the generator of online number

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p {
 
 .timerContainer {
   font-size: 0.9rem;
-  margin-bottom: 5em;
+  bottom: 1em;
 }
 
 .myProgress {
